--- a/styles.css
+++ b/styles.css
@@ -196,3 +196,20 @@
   width: 100%;
   text-align: center;
 }
+
+.desctiption_img {
+  resize: none;
+  width: 100%;
+  padding: 15px;
+  height: 100px;
+  font-size: 14px;
+  line-height: 18px;
+  color: rgb(4, 18, 27);
+  border: none;
+  border-radius: 5px;
+  background-color: #e8e8e8;
+}
+
+.desctiption_img:focus {
+  background: white;
+}
